[gd_scene load_steps=14 format=3 uid="uid://bi3s4e0865vy1"]

[ext_resource type="Script" uid="uid://m5wruq8vdmd1" path="res://src/Scenes/Enemies/enemy_body.gd" id="1_ep78m"]
[ext_resource type="Shader" uid="uid://svv0p84bgvya" path="res://src/Scenes/Enemies/EnemyShaders/get_hit.gdshader" id="2_aohye"]
[ext_resource type="Texture2D" uid="uid://cia6io7hrpacg" path="res://src/Assets/SpriteSheets/Enemies/zombie/Zombie.png" id="2_lhwcx"]

[sub_resource type="ViewportTexture" id="ViewportTexture_psofu"]
viewport_path = NodePath("2DScreen")

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_1kn5o"]
radius = 0.1
height = 0.5

[sub_resource type="ShaderMaterial" id="ShaderMaterial_3scj4"]
resource_local_to_scene = true
shader = ExtResource("2_aohye")
shader_parameter/highlight = false

[sub_resource type="Animation" id="Animation_qaabg"]
resource_name = "DIE_-X"
length = 5.0
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 0
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.25, 0.5, 0.75),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [100, 101, 102, 103]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("../../..")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(5),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"die"
}]
}

[sub_resource type="Animation" id="Animation_mjumw"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [90]
}

[sub_resource type="Animation" id="Animation_u5nsh"]
resource_name = "WALK_+X"
length = 2.4
loop_mode = 1
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 0
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.25, 0.5, 0.75, 1, 1.25, 1.5, 1.75, 2, 2.25),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [40, 41, 42, 43, 44, 45, 46, 47, 48, 49]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_of44n"]
resource_name = "WALK_+Z"
length = 2.4
loop_mode = 1
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 0
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.25, 0.5, 0.75, 1, 1.25, 1.5, 1.75, 2, 2.25),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [20, 21, 22, 23, 24, 25, 26, 27, 28, 29]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_fi12x"]
resource_name = "WALK_-X"
length = 2.4
loop_mode = 1
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 0
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.25, 0.5, 0.75, 1, 1.25, 1.5, 1.75, 2, 2.25),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_l3a37"]
resource_name = "WALK_-Z"
length = 2.4
loop_mode = 1
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 0
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.25, 0.5, 0.75, 1, 1.25, 1.5, 1.75, 2, 2.25),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [20, 21, 22, 23, 24, 25, 26, 27, 28, 29]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ni6eg"]
_data = {
&"DIE_-X": SubResource("Animation_qaabg"),
&"RESET": SubResource("Animation_mjumw"),
&"WALK_+X": SubResource("Animation_u5nsh"),
&"WALK_+Z": SubResource("Animation_of44n"),
&"WALK_-X": SubResource("Animation_fi12x"),
&"WALK_-Z": SubResource("Animation_l3a37")
}

[node name="EnemyBody" type="CharacterBody3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.341877, 0)
collision_layer = 3
script = ExtResource("1_ep78m")

[node name="Sprite3D" type="Sprite3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.0270118, 0)
billboard = 2
texture = SubResource("ViewportTexture_psofu")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.0875828, 0)
shape = SubResource("CapsuleShape3D_1kn5o")

[node name="NavigationAgent3D" type="NavigationAgent3D" parent="."]
target_desired_distance = 3.0
path_max_distance = 1.01
path_postprocessing = 1
avoidance_enabled = true
radius = 0.25
neighbor_distance = 0.5

[node name="2DScreen" type="SubViewport" parent="."]
disable_3d = true
transparent_bg = true
canvas_item_default_texture_filter = 0
size = Vector2i(125, 125)

[node name="SpriteContainer" type="Node2D" parent="2DScreen"]
position = Vector2(64, 64)

[node name="DisplaySpriteMain2d" type="Sprite2D" parent="2DScreen/SpriteContainer"]
texture_filter = 1
material = SubResource("ShaderMaterial_3scj4")
texture = ExtResource("2_lhwcx")
hframes = 10
vframes = 65
frame = 100

[node name="AnimationPlayer" type="AnimationPlayer" parent="2DScreen/SpriteContainer/DisplaySpriteMain2d"]
libraries = {
&"EnemyMvmtAnimations": SubResource("AnimationLibrary_ni6eg")
}
